/states is now setup all sql files are now a single gziped dump.

--- a/complaint-service/package.json
+++ b/complaint-service/package.json
@@ -9,7 +9,8 @@
     "dependencies": {
       "express": "4.16.0",
       "mysql": "2.15.0",
-      "knex": "0.13.0"
+      "knex": "0.13.0",
+      "lodash": "4.17.4"
     },
     "apidoc": {
       "title": "austin-davis-test"
