--- a/complaint-service/package.json
+++ b/complaint-service/package.json
@@ -4,13 +4,19 @@
     "description": "Node.js on Docker",
     "main": "api.js",
     "scripts": {
-      "start": "node api.js"
+      "start": "node api.js",
+      "test": "mocha integrationTests"
     },
     "dependencies": {
       "express": "4.16.0",
       "mysql": "2.15.0",
       "knex": "0.13.0",
       "lodash": "4.17.4"
+    },
+    "devDependencies": {
+      "supertest": "3.0.0",
+      "mocha": "4.0.1",
+      "chai": "4.1.2"
     },
     "apidoc": {
       "title": "austin-davis-test"
