--- a/complaint-service/package.json
+++ b/complaint-service/package.json
@@ -11,7 +11,8 @@
       "express": "4.16.0",
       "mysql": "2.15.0",
       "knex": "0.13.0",
-      "lodash": "4.17.4"
+      "lodash": "4.17.4",
+      "body-parser": "1.18.2"
     },
     "devDependencies": {
       "supertest": "3.0.0",
