--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,8 @@ jobs:
       - checkout
       - setup_remote_docker
       - run:
-          name: Install dependencies
-          command: |
-            apk add --no-cache \
-              py-pip=9.0.0-r1
-            pip install \
-              docker-compose==1.12.0 \
+          name: Install pip
+          command: apk add --no-cache py-pip=9.0.0-r1
+      - run:
+          name: Install docker-compose
+          command: pip install docker-compose==1.12.0 
