--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,3 +13,8 @@ jobs:
       - run:
           name: Install docker-compose
           command: pip install docker-compose==1.12.0 
+      - run:
+          name: build the application
+          command: - run:
+          name: Run tests
+          command: docker-compose -f ./docker-compose.test.yml up
