added the exit flag to mocha since the tests would hang even after all tests were finished running.

--- a/complaint-service/package.json
+++ b/complaint-service/package.json
@@ -5,7 +5,7 @@
     "main": "api.js",
     "scripts": {
       "start": "node api.js",
-      "test": "mocha integrationTests"
+      "test": "mocha integrationTests --exit"
     },
     "dependencies": {
       "express": "4.16.0",
