--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,4 +15,4 @@ jobs:
           command: pip install docker-compose==1.12.0 
       - run:
           name: Run tests
-          command: docker-compose -f ./docker-compose.test.yml up
+          command: docker-compose -f ./docker-compose.test.yml up --exit-code-from complaint-service
