see if mysql will load in circle.

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -15,3 +15,5 @@ services:
       MYSQL_USER: root
       MYSQL_DB: complaints
       MYSQL_PASSWORD: password
+    depends_on: 
+      - complaintdb
