--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,13 @@ jobs:
           command: apk add --no-cache py-pip=9.0.0-r1
       - run:
           name: Install docker-compose
-          command: pip install docker-compose==1.12.0 
+          command: pip install docker-compose==1.12.0
+      - run:
+          name: spin up db
+          command: docker-compose -f ./docker-compose.test.yml up complaintdb
+      -run:
+          name: wait for db to be seeded
+          command: docker-compose ./docker-compose.test.ym run complaint-service ./wait-for-mysql.sh
       - run:
           name: Run tests
           command: docker-compose -f ./docker-compose.test.yml up --exit-code-from complaint-service
