--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           command: pip install docker-compose==1.12.0
       - run:
           name: spin up db
-          command: docker-compose -f -d ./docker-compose.test.yml up complaintdb 
+          command: docker-compose -f ./docker-compose.test.yml up -d complaintdb 
       - run:
           name: wait for db to be seeded
           command: docker-compose ./docker-compose.test.ym run complaint-service ./wait-for-mysql.sh
