--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           command: docker-compose -f ./docker-compose.test.yml up -d complaintdb 
       - run:
           name: wait for db to be seeded
-          command: docker-compose ./docker-compose.test.ym run complaint-service ./wait-for-mysql.sh
+          command: docker-compose ./docker-compose.test.yml run complaint-service ./wait-for-mysql.sh
       - run:
           name: Run tests
           command: docker-compose -f ./docker-compose.test.yml up --exit-code-from complaint-service
