--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
           name: spin up db
           command: docker-compose -f ./docker-compose.test.yml up -d complaintdb 
       - run:
-          name: wait for db to be seeded
+          name: wait for db
           command: docker-compose ./docker-compose.test.yml run complaint-service ./wait-for-mysql.sh
       - run:
           name: Run tests
