wait for db now occurs from the circle .yml

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -9,7 +9,7 @@ services:
        MYSQL_ROOT_PASSWORD: password
   complaint-service:
     build: ./complaint-service
-    command: './wait-for-mysql.sh | npm test'
+    command: 'npm test'
     environment:
       MYSQL_HOST: localhost
       MYSQL_USER: root
