--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,3 +22,31 @@ jobs:
       - run:
           name: Run tests
           command: docker-compose -f ./docker-compose.test.yml up --exit-code-from complaint-service
+
+  deploy:
+    docker:
+        - image: google/cloud-sdk:alpine
+    working_directory: /home/circleci/app
+    steps:
+        - checkout
+
+    - run:
+        name: Authenticate with Google Cloud
+        command: |
+            echo $GCLOUD_KEY_JSON > /home/circleci/.gcloud-key
+            gcloud auth activate-service-account --key-file=/home/circleci/.gcloud-key
+    - run:
+        name: Deploy Documentation to Google App Engine
+        command: |
+            gcloud config set project austin-davis-test
+            cd ./doc-service
+            gcloud app deploy
+
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
