added the GAE app.yaml to the complaint-service and now gets deployed after the documentation.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,17 @@ jobs:
             command: |
                 gcloud config set project austin-davis-test
                 cd ./doc-service
+                gcloud app deploy --version="documentation"
+        - run:
+            name: Deploy the service to Google App Engine
+            command: |
+                cd ../complaint-service
                 gcloud app deploy
+
+
+
+
+
 
 workflows:
   version: 2
