--- a/complaint-service/app.yaml
+++ b/complaint-service/app.yaml
@@ -1,5 +1,7 @@
-    environment:
-      MYSQL_HOST: complaintdb
-      MYSQL_USER: root
-      MYSQL_DB: complaints
-      MYSQL_PASSWORD: password
+runtime: custom
+env: flex
+env_variables:
+  MYSQL_HOST: austin-davis-test:us-central1:complaintdb    
+  MYSQL_USER: root
+  MYSQL_DB: complaints
+  MYSQL_PASSWORD: PmH6A4skwJJotlne
