both circleci and local dev env sqls now have the same file format/dockerfile.

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,12 +1,11 @@
 version: '3'
 services:
   complaintdb:
-    build:
-      context: ./complaintdb
-      dockerfile: ./DockerfileCI
+    build: ./complaintdb
     environment:
        MYSQL_DATABASE: complaints
        MYSQL_ROOT_PASSWORD: password
+       SQL_DIR: circleCISql
   complaint-service:
     build: ./complaint-service
     command: 'npm test'
@@ -16,3 +15,14 @@ services:
       MYSQL_DB: complaints
       MYSQL_PASSWORD: password
       DOCKERIZE_VERSION: v0.3.0
+
+
+      complaintdb:
+    build: ./complaintdb
+    volumes:
+      - mysql_data:/var/lib/mysql
+    ports:
+      - "3001:3306"
+    environment:
+       MYSQL_DATABASE: complaints
+       MYSQL_ROOT_PASSWORD: password
