dockerfile now unzips the sql seed file in the container.

--- a/complaintdb/Dockerfile
+++ b/complaintdb/Dockerfile
@@ -1,2 +1,3 @@
 FROM mysql:5.7
-ADD ${SQL_DIR} /docker-entrypoint-initdb.d 
+ADD ${SQL_SEED} /docker-entrypoint-initdb.d
+RUN gunzip -d /docker-entrypoint-initdb.d/*.gz
