--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -5,7 +5,7 @@ services:
     environment:
        MYSQL_DATABASE: complaints
        MYSQL_ROOT_PASSWORD: password
-       SQL_DIR: circleCISql
+       SQL_SEED: ciSeed.sql.gz
   complaint-service:
     build: ./complaint-service
     command: 'npm test'
