--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
        MYSQL_DATABASE: complaints
        MYSQL_ROOT_PASSWORD: password
-       SQL_DIR: circleCISql
+       SQL_SEED: devSeed.sql.gz
 
   complaint-service:
     build: ./complaint-service
