--- a/complaintdb/Dockerfile
+++ b/complaintdb/Dockerfile
@@ -1,3 +1,3 @@
 FROM mysql:5.7
-ADD ${SQL_SEED} /docker-entrypoint-initdb.d
+ADD devSeedSql /docker-entrypoint-initdb.d
 RUN gunzip -d /docker-entrypoint-initdb.d/*.gz
